--- a/src/com/fashionapp/views/ChatView.mxml
+++ b/src/com/fashionapp/views/ChatView.mxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" title="{resourceManager.getString('resources','chattitle')}" 
-		creationComplete="{contactList.visible = true;}"
+		creationComplete="{contactList.visible = true;controller.creationCompleteHandler()}"
 		actionBarVisible="false" xmlns:components="com.fashionapp.views.components.*"
-		skinClass="assets.images.CustomViewSkin">
-	
+		skinClass="assets.images.CustomViewSkin" xmlns:controllers="com.fashionapp.controllers.*">
+	<fx:Declarations>
+		<!-- Place non-visual elements (e.g., services, value objects) here -->
+		<controllers:ChatViewController id="controller" view="{this}"/>
+	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import com.fashionapp.model.BuyerAppModelLocator;
+			import com.fashionapp.model.ChatData;
+			import com.fashionapp.model.LoginData;
 			import com.fashionapp.utils.BasicUtil;
 			import com.fashionapp.views.components.NewBrand;
 			
@@ -29,7 +35,10 @@
 			protected function chatList_clickHandler(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				navigator.pushView(CurrentChatView);
+				var chat:ChatData = new ChatData();
+				chat.createdBy = BuyerAppModelLocator.getInstance().loginData.id;
+				chat.toUserId = (contactList.selectedItem as LoginData).id;
+				navigator.pushView(CurrentChatView,chat);
 			}
 			
 		]]>
@@ -73,10 +82,10 @@
 					 paddingRight="{BasicUtil.getComponentPadding(30)}"/>
 		</s:Group>
 		<s:Group height="100%" width="100%">
-			<s:List id="contactList" visible="{!chatList.visible}" width="100%" height="100%" labelField="data"
+			<s:List id="contactList" visible="{!chatList.visible}"  click="chatList_clickHandler(event)" dataProvider="{BuyerAppModelLocator.getInstance().users}" width="100%" height="100%" labelField="data"
 					skinClass="com.fashionapp.skins.MenuListSkin"
 					itemRenderer="com.fashionapp.views.components.ListItemRendererWithSep">
-				<s:dataProvider>
+				<!--<s:dataProvider>
 					<s:ArrayCollection>
 						<fx:String>Ann Smith</fx:String>
 						<fx:String>Ann Smith</fx:String>
@@ -87,9 +96,9 @@
 						<fx:String>Ann Smith</fx:String>
 						<fx:String>Ann Smith</fx:String>
 					</s:ArrayCollection>
-				</s:dataProvider>
+				</s:dataProvider>-->
 			</s:List>
-			<s:List id="chatList" visible="{!contactList.visible}" width="100%" height="100%" click="chatList_clickHandler(event)" 
+			<s:List id="chatList" visible="{!contactList.visible}" width="100%" height="100%" 
 					itemRenderer="com.fashionapp.views.ChatItemRenderer">
 				<s:dataProvider>
 					<s:ArrayCollection>
